--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <style>
         body {
             margin: 0;
+            user-select: none;
             padding: 0;
             background: radial-gradient(circle, rgba(10, 10, 10, 1) 0%, rgba(20, 20, 20, 1) 100%);
             font-family: 'Roboto', sans-serif;
